# ogf

./: meson.build  meson_options.txt
examples/test/: main.cxx  meson.build
include/ogf/: types.hxx
include/ogf/graphics/: color.hxx  drawable.hxx  image.hxx  mesh.hxx  shader.hxx  texture.hxx  vertex3d.hxx
include/ogf/math/: vector2.hxx  vector3.hxx
include/ogf/system/: event.hxx  window.hxx
libraries/: meson.build
libraries/glad/: meson.build
libraries/glad/include/glad/: glad.h
libraries/glad/source/: glad.c
libraries/stb/: meson.build
libraries/tinyobjloader/: meson.build
source/: meson.build
source/ogf/graphics/: color.cxx  image.cxx  mesh.cxx  meson.build  shader.cxx  texture.cxx
source/ogf/system/: event.cxx  meson.build  window.cxx
source/ogf/utils/: io_utils.cxx  io_utils.hxx  meson.build
tests/: meson.build
tests/utils/: io_utils.cxx
